--- a/Academy3/Course1.html
+++ b/Academy3/Course1.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>No.1 - 制作一个简单的菜单动画效果</title>
     <style>
-        #sec1 {           
-            margin: 100px auto;            
+        #sec1 {
+            margin: 100px auto
         }
 
         #sec1 p {
@@ -21,9 +21,7 @@
         }
 
         #sec1 hr {
-            width: 0px;
             height: 10px;
-            visibility: hidden;
             margin: 0px auto;
             background: blue;
             -webkit-transition: all .5s ease-in-out;
@@ -31,47 +29,62 @@
             transition: all .5s ease-in-out;
         }
 
-        #sec2 {            
-            margin: 0 auto;            
+        #sec2 {
+            margin: 0 auto;
         }
 
         #sec2 button {
             display: block;
             width: 250px;
-            font-size: 45px;            
+            font-size: 45px;
             margin: 10px auto;
             border: 1px solid #999;
             border-radius: 10px;
             box-shadow: 0 2px rgba(0, 0, 0, 0.4);
             outline: none
         }
-    </style>    
+
+        .activePara {
+            color: blue;
+        }
+
+        .notActiveHr {
+            visibility: hidden;
+            width: 0;
+        }
+
+        .activeHr {
+            visibility: visible;
+            width: 350px;
+        }
+    </style>
 </head>
 
 <body>
 
     <section id="sec1">
         <p>前端学院</p>
-        <hr id="line">
+        <hr class="notActiveHr">
     </section>
 
     <section id="sec2">
         <button class="btn">切换样式</button>
     </section>
 
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script>
-        let para = document.getElementsByTagName('p')[0];
-        let line = document.getElementById('line');
-        let btn = document.getElementsByTagName('button')[0];
-        btn.addEventListener('click', function () {
-            line.style.visibility='visible';
-            line.style.width='350px';    
-            para.style.color='blue';
-            setTimeout(function() {
-                line.style.visibility='hidden';
-                line.style.width='0px';
-                para.style.color='black';
-            },1200)
+        $(document).ready(function () {
+            let status = 0;
+            $('button').click(function () {
+                status = !status;
+                if (status) {
+                    $('p').addClass('activePara');
+                    $('hr').removeClass('notActiveHr').addClass('activeHr');
+                } else {
+                    $('p').removeClass('activePara');
+                    $('hr').removeClass('activeHr').addClass('notActiveHr');
+                }
+            })
         })
     </script>
 </body>
