--- a/Academy3/Course2-1.html
+++ b/Academy3/Course2-1.html
@@ -28,22 +28,37 @@
         }
 
         #container div:nth-child(2) {
+            -webkit-transform: skewX(30deg);
+            -moz-transform: skewX(30deg);
+            -ms-transform: skewX(30deg);
             transform: skewX(30deg);
         }
 
         #container div:nth-child(3) {
+            -webkit-transform: scaleX(0.5);
+            -moz-transform: scaleX(0.5);
+            -ms-transform: scaleX(0.5);
             transform: scaleX(0.5);
         }
 
         #container div:nth-child(4) {
+            -webkit-transform: rotate(45deg);
+            -moz-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
             transform: rotate(45deg);
         }
 
         #container div:nth-child(5) {
+            -webkit-transform: translate(10px, 20px);
+            -moz-transform: translate(10px, 20px);
+            -ms-transform: translate(10px, 20px);
             transform: translate(10px, 20px);
         }
 
         #container div:nth-child(6) {
+            -webkit-transform: rotate(45deg) scaleX(2) skewX(20deg) translate(10px, 70px);
+            -moz-transform: rotate(45deg) scaleX(2) skewX(20deg) translate(10px, 70px);
+            -ms-transform: rotate(45deg) scaleX(2) skewX(20deg) translate(10px, 70px);
             transform: rotate(45deg) scaleX(2) skewX(20deg) translate(10px, 70px)
         }
     </style>
