--- a/Academy3/Course1-2.html
+++ b/Academy3/Course1-2.html
@@ -71,7 +71,7 @@
         <button class="btn">切换样式</button>
     </section>
 
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="./js/jquery-3.2.1.min.js"></script>
     <script>
         $(document).ready(function () {
             let status = 0;
