bg font improvement

--- a/Academy1/website.html
+++ b/Academy1/website.html
@@ -17,7 +17,8 @@
             <hgroup class="center-text rules-detail">
                 <h1>Hello World</h1>
                 <h4>China is speeding up strategic plan, standards, traffic rules, laws and regulations on accident-incurred
-                    liabilities for its smart car industry, Economic Information Daily reported Thursday.</h4>
+                    liabilities for its smart car industry, Economic Information Daily reported Thursday.
+                </h4>
             </hgroup>
         </section>
 
@@ -147,25 +148,25 @@
 
     <section class="learn-choose">
 
-        <figure class="leaf">
-            <img src="./img/website/leaf.png" alt="">
-            <figcaption>
+        <div class="leaf">
+            <div class="image"></div>
+            <div class="text">
                 <h3>Learn How to Improve Your Personal Business</h3>
                 <p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee,
                     said that China will also launch design guidance for smart cars, smart map architecture and standards
                     for test grounds.</p>
-            </figcaption>
-        </figure>
+            </div>
+        </div>
 
-        <figure class="bird">
-            <figcaption>
+        <div class="bird">
+            <div class="text">
                 <h3>Learn How to Improve Your Personal Business</h3>
                 <p>Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee,
                     said that China will also launch design guidance for smart cars, smart map architecture and standards
                     for test grounds.</p>
-            </figcaption>
-            <img src="./img/website/bird.png" alt="">
-        </figure>
+            </div>
+            <div class="image"></div>
+        </div>
 
     </section>
 
