--- a/Academy1/website.html
+++ b/Academy1/website.html
@@ -322,7 +322,7 @@
                 <figure>
                     <img src="./img/website/twitter2.png" alt="">
                     <img src="./img/website/facebook2.png" alt="">
-                    <img src="./img/website/Google-Icon.png" alt="">
+                    <img src="./img/website/Google-Ico.png" alt="">
                     <img src="./img/website/Tumbler-Icon.png" alt="">
                     <img src="./img/website/Pinterest-Icon.png" alt="">
                     <img src="./img/website/LinkedIn-Icon.png" alt="">
