--- a/Academy1/Day12_15-1.html
+++ b/Academy1/Day12_15-1.html
@@ -177,91 +177,86 @@
 
                         <li class="chat2 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Victor.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
-                                    <h3>Twitter</h3>
+                                    <h2>Victor Weber</h2>
+                                    <h3>Adobe</h3>
                                 </figcaption>
                             </figure>
-                            <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
-                                stable...
-                            </p>
-                            <span class='timeAgo'>3m</span>
+                            <p class="text">I shared this on my fb wall a few months back, and I thought I'd share it here again because
+                                it's such a great...</p>
+                            <span class='timeAgo'>8m</span>
                             <span class="statusNum">4</span>
                         </li>
 
                         <li class="chat3 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Dustin.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
-                                    <h3>Twitter</h3>
+                                    <h2>Dustin Benson</h2>
+                                    <h3>Facebook</h3>
                                 </figcaption>
                             </figure>
-                            <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
-                                stable...
+                            <p class="text">If there is anyone who needs an invitation please add yourself in the comments of this post!
                             </p>
-                            <span class='timeAgo'>3m</span>
+                            <span class='timeAgo'>Yesterday</span>
                             <span class="statusNum">4</span>
                         </li>
 
                         <li class="chat4 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Jack.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
-                                    <h3>Twitter</h3>
+                                    <h2>Jack Mason</h2>
+                                    <h3>Yahoo</h3>
                                 </figcaption>
                             </figure>
-                            <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
-                                stable...
-                            </p>
-                            <span class='timeAgo'>3m</span>
+                            <p class="text">BruteDC is a peer-to-peer movie+tv series sharing and downloading platform which works on intranet
+                                inside...</p>
+                            <span class='timeAgo'>Yesterday</span>
                             <span class="statusNum">4</span>
                         </li>
 
                         <li class="chat5 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Stephen.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
-                                    <h3>Twitter</h3>
+                                    <h2>Stephen Shelton</h2>
+                                    <h3>Snapchat</h3>
                                 </figcaption>
                             </figure>
-                            <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
-                                stable...
+                            <p class="text">Yes, p2p traffic is often filtered (QoSed). Although i do use BT on O2 wires, and in good days dl speed...
                             </p>
-                            <span class='timeAgo'>3m</span>
+                            <span class='timeAgo'>13 Jun</span>
                             <span class="statusNum">4</span>
                         </li>
 
                         <li class="chat6 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Sally.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
+                                    <h2>Sally Willis</h2>
                                     <h3>Twitter</h3>
                                 </figcaption>
                             </figure>
-                            <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
-                                stable...
+                            <p class="text">Yes, it's O2: 'internet extreme', which is no longer offered.
                             </p>
-                            <span class='timeAgo'>3m</span>
+                            <span class='timeAgo'>12 Jun</span>
                             <span class="statusNum">4</span>
                         </li>
 
                         <li class="chat7 chat-item">
                             <figure>
-                                <img src="./img/Day12_15/Bessie.png" alt="">
+                                <img src="./img/Day12_15/Robert.png" alt="">
                                 <figcaption>
-                                    <h2>Bessie Berry</h2>
-                                    <h3>Twitter</h3>
+                                    <h2>Rober Patton</h2>
+                                    <h3>A Team</h3>
                                 </figcaption>
                             </figure>
                             <p class="text">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and
                                 stable...
                             </p>
-                            <span class='timeAgo'>3m</span>
+                            <span class='timeAgo'>9 Jun</span>
                             <span class="statusNum">4</span>
                         </li>
 
@@ -339,6 +334,10 @@
                             </figure>
                         </li>
 
+                        <div class="tuesDivi right-divider">
+                            <hr><span>Tuesday</span><hr>
+                        </div>
+
                         <li class="message3 message-item">
                             <figure>
                                 <img src="./img/Day12_15/Bessie.png" alt="">
@@ -374,6 +373,10 @@
                             </figure>
                         </li>
 
+                        <div class="newMesDivi right-divider">
+                            <hr><span>New Messages</span><hr>
+                        </div>
+
                         <li class="message5 message-item">
                             <figure>
                                 <img src="./img/Day12_15/Bessie.png" alt="">
@@ -391,7 +394,12 @@
 
                     </ul>
 
-                    <div class="createMessage"></div>
+                    <div class="createMessage">
+                        <span>
+                            <img src="./img/Day12_15/addIcon.png" alt="">
+                        </span>
+                        <input type="text" value="Well, kinda both :) but more of that second option, i`ve seen many systems infected and crawling with">
+                    </div>
 
                 </div>
             </div>
